обновление ошибок: 4